--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,32 @@
 aiofiles
 aiohttp
-apscheduler
 asyncio
-stripe==10.7.0
-mysql-connector-python==9.0.0
-telebot==0.0.5
-youtube_dl==2021.12.17 
 beautifulsoup4
 dnspython
 ffmpeg-python
-future==1.0.0
-git+https://github.com/AsmSafone/SafoneAPI
 gitpython
-gtts
 hachoir
 heroku3
-httpx==0.27.0
-lexica-api
+gtts
+httpx
+langdetect
 motor
-opencv-python
+numpy
 pillow==9.5.0
 psutil
-pickledb
-pornhub-api==0.3.0
-pycountry
-pycryptodome
-pydub
-pyfiglet
-pykeyboard
-python-dotenv==1.0.1
-python-telegram-bot==21.1.1
-pyshorteners
-pyttsx3
-pytz
-pytube
 py-tgcalls==0.9.7
-pyyaml==6.0.1
+pykeyboard
+pyrofork
+python-dotenv
+pyyaml
+py-yt-search
 requests
-SafoneAPI
-search_engine_parser
 speedtest-cli
-SpeechRecognition
 spotipy
-tgcrypto==1.2.5
+tgcrypto
 unidecode
+yt-dlp
 youtube-search
 youtube-search-python
-git+https://github.com/KurimuzonAkuma/pyrogram
+wget
 git+https://github.com/yt-dlp/yt-dlp
