--- a/requirements.txt
+++ b/requirements.txt
@@ -7,27 +7,22 @@ ffmpeg-python
 gitpython
 hachoir
 heroku3
-gtts
-httpx
-langdetect
 motor
-numpy
 pillow==9.5.0
 psutil
 py-tgcalls==0.9.7
 pykeyboard
-pyrofork
-python-dotenv
-pyyaml
+python-dotenv==1.0.1
+pyyaml==6.0.1
 requests
 speedtest-cli
 spotipy
 SafoneAPI
-tgcrypto
+tgcrypto==1.2.5
 unidecode
-yt-dlp
 youtube-search
 youtube-search-python
-wget
+youtube_dl==2021.12.17 
+git+https://github.com/KurimuzonAkuma/pyrogram
 git+https://github.com/yt-dlp/yt-dlp
 git+https://github.com/AsmSafone/SafoneAPI
