--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 aiofiles
 aiohttp
-apscheduler
-asyncio
-mysql-connector-python==9.0.0 
+asyncio 
 beautifulsoup4
 dnspython
 ffmpeg-python
@@ -11,29 +9,20 @@ hachoir
 heroku3
 httpx==0.27.0
 motor
-opencv-python
 pillow==9.5.0
 psutil
-pycountry
-pydub
 pykeyboard
+pyrofork
 python-dotenv==1.0.1
-python-telegram-bot==21.1.1
-pyttsx3
-pytz
 py-tgcalls==0.9.7
 pyyaml==6.0.1
 requests
 SafoneAPI
-search_engine_parser
 speedtest-cli
 spotipy
 tgcrypto==1.2.5
-telebot==0.0.5
 unidecode
 youtube-search
 youtube-search-python
 youtube_dl==2021.12.17
-git+https://github.com/AsmSafone/SafoneAPI
-git+https://github.com/KurimuzonAkuma/pyrogram
 git+https://github.com/yt-dlp/yt-dlp
